// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index metadata creation through object metadata creation v2 Should create an index on ts-search-vector standard field when creating a custom object 1`] = `
{
  "indexType": "GIN",
  "isCustom": false,
  "isUnique": false,
  "name": "IDX_be6fe08944beb9886fb83dfbbf1",
}
`;

exports[`Index metadata creation through object metadata creation v2 Should update index on related object name singular update 1`] = `
{
  "indexType": "GIN",
  "isCustom": false,
  "isUnique": false,
  "name": "IDX_be6fe08944beb9886fb83dfbbf1",
}
`;

exports[`Index metadata creation through object metadata creation v2 Should update index on related object name singular update 2`] = `
{
  "indexType": "GIN",
  "isCustom": false,
  "isUnique": false,
  "name": "IDX_e1506c1b3612d7f73c39fcaae6e",
}
`;
